add pagination index siswa

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,3 +36,37 @@ h2 {
 .box-button {
     display: inline-block;
 }
+
+.table-nav, .tombol-nav {
+    display: block;
+    clear: both;
+    float: left;
+    width: 100%;
+}
+
+.tombol-nav {
+    margin-top: 10px;
+}
+
+.table-nav {
+    border-top: 1px solid #000;
+    border-bottom: 1px solid #000;
+}
+
+.jumlah_data {
+    float: left;
+    padding-top: 15px;
+}
+
+.paging {
+    float: right;
+    text-align: right; 
+}
+
+.paging ul.pager, .paging ul.pagination {
+    text-align: right;
+}
+
+ul.pagination, ul.pager {
+    margin-top: 8px;
+}
